Example for sending alert if the file was not updated within last hour:
    if modification time is older than 1 hour then alert

New: Renamed the "set logfile <path|syslog>" statement to "set log <path|syslog>".
The "logfile" form is deprecated, but kept for backward compatibility.

Fixed: Issue #566: Systemd template for Monit: Added StandardOutput=null option to prevent
systemd to duplicate Monit log output.

Fixed: Issue #568: fix cross-compilation

Fixed: Issue #569: fix configure --without-zlib

Fixed: Issue #570: if the connection test requires STARTTLS, the certificate valid
days test was broken.

Fixed: Issue #577: Non-SSL connections may return confusing message "Resource temporarily unavailable"
on timeout.

Fixed: Issue #584: fix compilation for MacOSX 10.6.x - 10.9.x.

Fixed: Issue #586: HTTP protocol test: Support URL string as custom request to allow monitoring
HTTP proxy. Example for testing Squid:
  if failed port 3128 protocol http request "cache_object://localhost/utilization" then alert

Fixed: Issue #588: If the connection or ping test repetition is set, log partial failures
with warning priority instead of error.

Fixed: Support compilation with OpenSSL 1.1.0 that was compiled with no-deprecated option.

Fixed: The connection test retry option was broken and performed always one test with no retry on
error.

Fixed: HTTP protocol test: The "Connection: close" HTTP header was always included even if
it was part of the custom HTTP headers list.

Fixed: Linux: Subtract ZFS ARC size from the system memory usage.

Fixed: If the SSL test connection failed and certificate validity test was active,
monit returned confusing certificate validity error. The test is now skipped in such
case as it can be performed only if the certificate can be read.

Fixed: The certificate validity test and checksum test didn't work for self-signed
certificates if such certificates were allowed.


Version 5.21.0
